crates/flight-profile/tests/snapshots/cascade_integration__fa18c_full_cascade.snap
---
source: crates/flight-profile/tests/cascade_integration.rs
expression: "&merged"
---
{
  "schema": "flight.profile/1",
  "sim": "msfs",
  "aircraft": {
    "icao": "F18"
  },
  "axes": {
    "pitch": {
      "deadzone": 0.03,
      "expo": 0.3,
      "slew_rate": 3.0,
      "detents": [],
      "curve": [
        {
          "input": 0.0,
          "output": 0.0
        },
        {
          "input": 0.25,
          "output": 0.1
        },
        {
          "input": 0.5,
          "output": 0.4
        },
        {
          "input": 0.75,
          "output": 0.8
        },
        {
          "input": 1.0,
          "output": 1.0
        }
      ],
      "filter": null
    },
    "roll": {
      "deadzone": 0.02,
      "expo": 0.1,
      "slew_rate": 2.0,
      "detents": [],
      "curve": null,
      "filter": null
    },
    "throttle": {
      "deadzone": 0.02,
      "expo": null,
      "slew_rate": 50.0,
      "detents": [
        {
          "position": -1.0,
          "width": 0.05,
          "role": "cutoff"
        }
      ],
      "curve": null,
      "filter": null
    },
    "yaw": {
      "deadzone": 0.08,
      "expo": 0.1,
      "slew_rate": 1.5,
      "detents": [],
      "curve": null,
      "filter": null
    }
  },
  "pof_overrides": {
    "takeoff": {
      "axes": {
        "pitch": {
          "deadzone": null,
          "expo": 0.15,
          "slew_rate": 1.5,
          "detents": [],
          "curve": null,
          "filter": null
        },
        "yaw": {
          "deadzone": 0.12,
          "expo": 0.2,
          "slew_rate": null,
          "detents": [],
          "curve": null,
          "filter": null
        }
      },
      "hysteresis": null
    }
  }
}
